update readfile method and create save method

--- a/untitled/pom.xml
+++ b/untitled/pom.xml
@@ -8,12 +8,17 @@
     <artifactId>untitled</artifactId>
     <version>1.0-SNAPSHOT</version>
     <dependencies>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>2.17.2</version> <!-- Make sure the version matches your Jackson core version -->
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.17.2</version>
+        </dependency>
 
-    <dependency>
-        <groupId>org.json</groupId>
-        <artifactId>json</artifactId>
-        <version>20240303</version>
-    </dependency>
     </dependencies>
     <properties>
         <maven.compiler.source>22</maven.compiler.source>
